--- a/gamesstyle.css
+++ b/gamesstyle.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @font-face {
     font-family: neon;
-    src: url("Fonts/neon_80s/Neon.ttf");
+    src: url("neon_80s/Neon.ttf");
   }
   
 
