--- a/gamesstyle.css
+++ b/gamesstyle.css
@@ -65,7 +65,7 @@ p{
     left: 0;
     width: 100%;
     height: 100%;
-    transform-style: preserve-3d
+/*     transform-style: preserve-3d */
 }
 
 .container .box .body .imgContainer img {
